force-app/main/default/objects/Time_Entry__c/fields/Duration_Display__c.field-meta.xml
<CustomField>
    <fullName>Duration_Display__c</fullName>
    <formula>IF(
  ISBLANK(End_Time__c),
  &quot;Running&quot;,
  TEXT( FLOOR( ( End_Time__c - Start_Time__c ) * 24 ) ) &amp; &quot;h &quot; &amp;
  TEXT( MOD( FLOOR( ( End_Time__c - Start_Time__c ) * 1440 ), 60 ) ) &amp; &quot;m&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration (Pretty)</label>
    <type>Text</type>
</CustomField>