force-app/main/default/objects/Time_Entry__c/fields/Duration_Hours__c.field-meta.xml
<CustomField>
    <fullName>Duration_Hours__c</fullName>
    <formula>IF(
  ISBLANK( End_Time__c ),
  0,
  ROUND( ( End_Time__c - Start_Time__c ) * 24 , 2 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>