force-app/main/default/objects/Time_Entry__c/validationRules/End_After_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>End_After_Start</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT( ISBLANK( End_Time__c ) ),
  End_Time__c &lt;= Start_Time__c
)</errorConditionFormula>
    <errorDisplayField>End_Time__c</errorDisplayField>
    <errorMessage>End Time must be after Start Time.</errorMessage>
</ValidationRule>