force-app/main/default/objects/Time_Entry__c/listViews/Today_My_Entries.listView-meta.xml
<ListView>
    <fullName>Today_My_Entries</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Task__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Start_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today - My Entries</label>
</ListView>